[metadata]
name = GeminiDetection
version = 9.0

[options]
packages = gemini_component
install_requires =
    mpf_component_api>=9.0
    mpf_component_util>=9.0
    google-generativeai

[options.entry_points]
mpf.exported_component =
    component = gemini_component.gemini_component:GeminiComponent

[options.package_data]
gemini_component=models/*
