[metadata]
name = LlavaDetection
version = 9.0

[options]
packages = llava_component
install_requires =
    mpf_component_api>=9.0
    mpf_component_util>=9.0

[options.entry_points]
mpf.exported_component =
    component = llava_component.llava_component:LlavaComponent

[options.package_data]
llava_component=models/*
