[metadata]
name = PixtralDetection
version = 9.0

[options]
packages = pixtral_component
install_requires =
    mpf_component_api>=9.0
    mpf_component_util>=9.0
    vllm

[options.entry_points]
mpf.exported_component =
    component = pixtral_component.pixtral_component:PixtralComponent

[options.package_data]
pixtral_component=data/crypto_prompts.json, data/crypto_json_prompts.json